// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chip /> snapshot it should match snapshot with disabled 1`] = `
<Chip
  disabled={true}
>
  <Chip
    disabled={true}
  >
    <mdc-chip
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot 1`] = `
<Chip>
  <Chip>
    <mdc-chip
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with className 1`] = `
<Chip
  className="example-class"
>
  <Chip
    className="example-class"
  >
    <mdc-chip
      class="example-class"
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with icon 1`] = `
<Chip
  iconName="accessibility-regular"
>
  <Chip
    iconName="accessibility-regular"
  >
    <mdc-chip
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with id 1`] = `
<Chip
  id="example-id"
>
  <Chip
    id="example-id"
  >
    <mdc-chip
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with style 1`] = `
<Chip
  style={
    Object {
      "color": "pink",
    }
  }
>
  <Chip
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <mdc-chip
      style={
        Object {
          "color": "pink",
        }
      }
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with text 1`] = `
<Chip
  label="Some chip text"
>
  <Chip
    label="Some chip text"
  >
    <mdc-chip
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;
